Bug 172978 - jobs in statusbar get stuck
Summary: jobs in statusbar get stuck
Status: RESOLVED FIXED
Alias: None
Product: amarok
Classification: Applications
Component: general (show other bugs)
Version: 2.0-SVN
Platform: Unlisted Binaries Linux
: NOR major
Target Milestone: ---
Assignee: Amarok Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2008-10-16 19:01 UTC by Lydia Pintscher
Modified: 2009-12-09 11:28 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed In:


Attachments
Jobs are stuck (255.92 KB, image/png)
2008-10-28 09:33 UTC, Mikko C.
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Lydia Pintscher 2008-10-16 19:01:54 UTC
Some coverfetching jobs in the statusbar get stuck at 0% and never do anything. Maybe also a collection scanning process but that might be unrelated.
Comment 1 Lydia Pintscher 2008-10-16 19:03:08 UTC
They also seem to cause Amarok not to quit.
Comment 2 Mark Kretschmann 2008-10-21 22:22:40 UTC
*** Bug 173252 has been marked as a duplicate of this bug. ***
Comment 3 Mikko C. 2008-10-28 09:33:30 UTC
Created attachment 28200 [details]
Jobs are stuck

Probably very similar to what I get with Dynamic playlist.
Sometimes the status bar is stuck at 100% and won't go away.
Comment 4 Nikolaj Hald Nielsen 2008-10-29 10:48:47 UTC
SVN commit 877358 by nhnielsen:

Fix for progress bars getting "stuck" when fetching covers. Should also fix other cases where this could happen.

BUG: 172978



 M  +2 -0      covermanager/CoverFetcher.cpp  
 M  +1 -0      statusbar/KJobProgressBar.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=877358
Comment 5 Teo Mrnjavac 2008-10-29 15:22:47 UTC
nhn's fix and mine are essentialy equivalent, mine kills the job earlier on xml fetch and nhn's kills it later but the result is in both cases that there's no way I could get stuck jobs.
WRT what nhn said in IRC about committing for extra safety I see no reason for it so I just confirm that this works.
Comment 6 Mikko C. 2008-10-30 14:53:33 UTC
This isn't fixed for me in trunk.
At this moment the progress bar is stuck at 46% and it says: "Generating Playlist..."
Note that I'm using dynamic playlist.
Comment 7 Teo Mrnjavac 2008-10-30 14:59:57 UTC
I think we might be dealing with two different issues here. The one with CoverFetcher is most certainly fixed.
Comment 8 Mikko C. 2008-10-30 15:03:19 UTC
But the title is pretty generic.
In fact http://bugs.kde.org/show_bug.cgi?id=173252 was marked as a duplicate of this one.
Comment 9 Teo Mrnjavac 2008-10-30 20:51:20 UTC
Closed this as the CoverFetcher issue is fixed, for the other issue see bug 173252.