Fix for progress bars getting "stuck" when fetching covers. Should also fix other cases where this could happen.

BUG: 172978


svn path=/trunk/extragear/multimedia/amarok/; revision=877358