src/statusbar/KJobProgressBar.cpp
@@ -23,6 +23,7 @@ KJobProgressBar::KJobProgressBar( QWidget *parent, KJob * job )
         : ProgressBarNG( parent )
 {
     connect( job, SIGNAL( percent( KJob*, unsigned long ) ),  SLOT( updateJobStatus( KJob *, unsigned long ) ) );
+    connect( job, SIGNAL( result( KJob* ) ), SLOT( delayedDone() ) );
 }
 
 
